--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,7 @@ auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_restart=false
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_args=
 auxiliary.org-netbeans-modules-javascript-nodejs.start_2e_file=tests/test.js
 auxiliary.org-netbeans-modules-javascript-nodejs.sync_2e_enabled=false
+auxiliary.org-netbeans-modules-javascript2-editor.jsversion=ECMA7
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
 browser.run=false
